# Python-web-hw13-Django

./: README.md  pyproject.toml
hw10_django/: manage.py
hw10_django/hw10_django/: asgi.py  settings.py  urls.py  wsgi.py
hw10_django/quotes/: urls.py  utils.py  views.py
hw10_django/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw10_django/quotes/static/quotes/: style.css
hw10_django/quotes/templates/quotes/: about.html  add_author.html  add_quote.html  base.html  index.html  tag_quotes.html
hw10_django/quotes/templatetags/: extract.py
hw10_django/users/: forms.py  urls.py  views.py
hw10_django/users/templates/users/: login.html  signup.html
hw10_django/utils/: add_data_to_mongo.py  postgres_migration.py  quotes.json
